--- a/roles/mac-defaults/tasks/main.yml
+++ b/roles/mac-defaults/tasks/main.yml
@@ -20,12 +20,22 @@
   community.general.osx_defaults:
     key: InitialKeyRepeat
     type: int
-    value: 10
+    value: 12
+- name: Navigate using tab and shift+tab anywhere
+  community.general.osx_defaults:
+    key: AppleKeyboardUIMode
+    type: int
+    value: 2
+- name: Repeat key on single press and hold
+  community.general.osx_defaults:
+    key: ApplePressAndHoldEnabled
+    type: bool
+    value: false
 - name: Faster key repeat
   community.general.osx_defaults:
     key: KeyRepeat
     type: int
-    value: 1
+    value: 5
 - name: Show full URL in Safari
   community.general.osx_defaults:
     domain: com.apple.Safari
@@ -56,3 +66,15 @@
     key: com.apple.Safari.ContentPageGroupIdentifier.WebKit2DeveloperExtrasEnabled
     type: bool
     value: true
+- name: Remove the default hot corner
+  community.general.osx_defaults:
+    domain: com.apple.Dock
+    key: wvous-bl-corner
+    type: int
+    value: 0
+- name: Point and click instead of press on trackpad
+  community.general.osx_defaults:
+    domain: com.apple.AppleMultitouchTrackpad
+    key: Clicking
+    type: int
+    value: 1
